# DCARL

./: README.md  requirements.txt
Field_testing/Scenario1/: DrawData.m  Files list.txt  (+5 more)
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/object_locator/: CMakeLists.txt  README.md  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/object_locator/nodes/: driving_space  nearest_locator  put_buffer
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/object_locator/src/zzz_cognition_object_locator/: __init__.py  driving_space_constructor.py  driving_space_constructor_xp.py  obstacle_locator.py  path_buffer.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/protocol/: CMakeLists.txt  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/protocol/msg/: DrivingSpace.msg  DynamicBoundary.msg  DynamicBoundaryPoint.msg  JunctionMapState.msg  LaneState.msg  MapState.msg  MultiLaneMapState.msg  RoadObstacle.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/cognition/protocol/src/zzz_cognition_msgs/: utils.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/continental_radar_msgs/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/continental_radar_msgs/msg/: RadarObs.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/novatel_gnss_msgs/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/novatel_gnss_msgs/msg/: BdsEphemeris.msg  BestPosb.msg  BestVelb.msg  GloEphemeris.msg  GpChc.msg  GpsEphemeris.msg  Headingb.msg  InsPva.msg  LongHeader.msg  Range.msg  RangeIn.msg  RawImu.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/oxford_gps_msgs/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/oxford_gps_msgs/msg/: Channel.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/radar_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/us_radar_msgs/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/messages/xpmotors_can_msgs/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/protocol/: CMakeLists.txt  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/driver/protocol/msg/: AuxiliaryReport.msg  ChassisReport.msg  ControlReport.msg  FrenetSerretState.msg  FrenetSerretState2D.msg  ResourceReport.msg  RigidBodyState.msg  RigidBodyState2D.msg  RigidBodyStateStamped.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/monitor/protocol/: CMakeLists.txt  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/monitor/protocol/msg/: DiagnosticInfo.msg  ModuleBeat.msg  ModuleStatus.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/map_filter/: CMakeLists.txt  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/pose_reporter/: CMakeLists.txt  README.md  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/pose_reporter/nodes/: manual
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/pose_reporter/srv/: UpdateOrigin.srv
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/protocol/: CMakeLists.txt  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/navigation/protocol/msg/: Lane.msg  LaneBoundary.msg  LanePoint.msg  LaneSituation.msg  Map.msg  MapString.msg  ReroutingRequest.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/autoware_msgs/: CMakeLists.txt
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/autoware_msgs/msg/: DetectedObject.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/protocol/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/protocol/msg/: BoundingBox.msg  BoundingBox2D.msg  DetectionBox.msg  DetectionBox2D.msg  DetectionBox2DArray.msg  DetectionBoxArray.msg  Dimension2DWithCovariance.msg  DimensionWithCovariance.msg  LaneDetection.msg  LaneDetectionArray.msg  ObjectClass.msg  ObjectSignals.msg  Pose2DWithCovariance.msg  TrackingBox.msg  TrackingBoxArray.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/tf4hmi/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/tf4hmi/launch/: tf4hmi.launch
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/perception/tf4hmi/src/: main.cc
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/planning/decision/continuous_models/: CMakeLists.txt  README.md  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/planning/protocol/: CMakeLists.txt  package.xml
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/planning/protocol/msg/: DecisionTrajectory.msg  PlannedTrajectory.msg  VehicleState.msg
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/visualization/rviz/box_visualizer/: CMakeLists.txt  README.md  package.xml  setup.py
Field_testing/Software_and_Raw_Data_on_Self-Driving_Vehicle/software/src/visualization/web/dash/: CMakeLists.txt  README.md  package.xml  setup.py
(+268 files in other folders)
