<package format="2">
  <name>zzz_cognition_object_locator</name>
  <version>0.1.0</version>
  <description>
    This module provide functionality to locate objects onto lanes
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>zzz_common</exec_depend>
  <exec_depend>zzz_driver_msgs</exec_depend>
  <exec_depend>zzz_cognition_msgs</exec_depend>
  <exec_depend>zzz_navigation_msgs</exec_depend>
  <exec_depend>zzz_perception_msgs</exec_depend>
  <export></export>
</package>
