<package format="2">
  <name>zzz_navigation_msgs</name>
  <version>0.1.0</version>
  <description>
    Unified interface message definitions for ZZZ navigation modules
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export><architecture_independent/></export>
</package>