<?xml version="1.0"?>
<package>
  <name>novatel_gnss_msgs</name>
  <version>0.0.1</version>
  <description>Novatel gnss messages.</description>

  <maintainer email="yafei.sun@novauto.com.cn">syf</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
