<?xml version="1.0"?>
<package>
  <name>us_radar_msgs</name>
  <version>0.0.1</version>
  <description>ultrasonic radar cannet msgs</description>

  <maintainer email="yong.zhu@novauto.com.cn">zhuyong</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
