<package format="2">
  <name>zzz_planning_decision_continuous_models</name>
  <version>0.1.0</version>
  <description>
    The main decision part
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>zzz_planning_msgs</exec_depend>
  <export></export>
</package>
