<package format="2">
  <name>zzz_visualization_rviz_box_visualizer</name>
  <version>0.1.0</version>
  <description>
    Visualize detection result in rviz
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>zzz_perception_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>zzz_perception_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>zzz_perception_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export></export>
</package>
