<package format="2">
  <name>zzz_visualization_web_dash</name>
  <version>0.1.0</version>
  <description>
    Plot.ly Dash based visualization
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>zzz_perception_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export></export>
</package>
